Thu Jun  6 15:54:57 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* windows.in (LIBCMD): Add the option /PAGESIZE:128 to the library
		command, since the krb5 library has gotten so big.

Tue Mar 12 19:40:59 1996  Ken Raeburn  <raeburn@cygnus.com>

	* pre.in (SRCTOP, BUILDTOP): Don't define.

Mon Oct 16 15:19:42 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* pre.in: KRB5_LIBDIR, ADMIN_BINDIR, KRB5_SHLIBDIR, KRB5_INCDIR
		are all based on exec_prefix.

Wed Oct 11 18:13:30 1995  Sam Hartman  <hartmans@tertius.mit.edu>

	* pre.in (DO_MAKE_SHLIB):  substitute VEXT, for the version extension for shared libs

Tue Oct 10 21:42:14 1995  Theodore Y. Ts'o  <tytso@dcl>

	* win-post.in: New file

	* windows.in: Moved .c -> .obj rule to win-post.in, since we need
		it after the LIBNAME makefile variable is defined in the
		main body of the Makefile.

Wed Sep 27 00:51:51 1995  Theodore Y. Ts'o  <tytso@dcl>

	* winexclude.sed: New file, used for generating DOS zip files.

Mon Sep 25 13:09:17 1995  Theodore Y. Ts'o  <tytso@dcl>

	* windows.in:
	* mac-pre.in:
	* pre.in: Added lines of the form "all:: all-$(WHAT)" for all,
		clean, install, and check.

Wed Sep 13 10:20:02 1995 Keith Vetter (keithv@fusion.com)

	* windows.in: added windows value for SRCTOP.

Thu Aug 24 19:25:10 1995  Theodore Y. Ts'o  <tytso@dcl>

	* .Sanitize: Update file list

Fri Jul 7 15:56:09 EDT 1995	Paul Park	(pjpark@mit.edu)
	* pre.in - Add DEPLIBS and LDFLAGS to be provided with each Makefile.

Fri Jun 23 14:24:02 1995  Theodore Y. Ts'o  <tytso@dcl>

	* pre.in (SRCTOP): Change SRCTOP so that it's defined in configure
		script, instead of being hardcoded as $(srcdir)/$(BUILDTOP).

Thu Jun 22 13:27:00 1995  Sam Hartman  <hartmans@tardis.MIT.EDU>

	* pre.in (STEXT): Add definitions for STEXT and STATIC_TARGET

Thu Jun 15 17:47:49 EDT 1995	Paul Park	(pjpark@mit.edu)
	* pre.in - Add definitions for building and using shared libraries.
		Add KRB5_SHLIBDIR which is the destination directory for
		shared libraries.
